@@ -1,3 +1,9 @@
+2006-01-24  Henrique Romano  <henrique@async.com.br>
+
+	* kiwi/ui/widgets/label.py (Label.set_underline): 
+	Implements set_underline method and a minor cleanup on all the other
+	text properties setters.
+
 2006-01-23  Johan Dahlin  <jdahlin@async.com.br>
 
 	* examples/list/stockicon.py: New example to demonstrate this feature.
